; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_buffer.c_tty_buffer_free_all.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_buffer.c_tty_buffer_free_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32*, %struct.tty_buffer*, %struct.tty_buffer* }
%struct.tty_buffer = type { %struct.tty_buffer* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_buffer_free_all(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  %3 = alloca %struct.tty_buffer*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %6 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 3
  %8 = load %struct.tty_buffer*, %struct.tty_buffer** %7, align 8
  store %struct.tty_buffer* %8, %struct.tty_buffer** %3, align 8
  %9 = icmp ne %struct.tty_buffer* %8, null
  br i1 %9, label %10, label %19

10:                                               ; preds = %4
  %11 = load %struct.tty_buffer*, %struct.tty_buffer** %3, align 8
  %12 = getelementptr inbounds %struct.tty_buffer, %struct.tty_buffer* %11, i32 0, i32 0
  %13 = load %struct.tty_buffer*, %struct.tty_buffer** %12, align 8
  %14 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %15 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 3
  store %struct.tty_buffer* %13, %struct.tty_buffer** %16, align 8
  %17 = load %struct.tty_buffer*, %struct.tty_buffer** %3, align 8
  %18 = call i32 @kfree(%struct.tty_buffer* %17)
  br label %4

19:                                               ; preds = %4
  br label %20

20:                                               ; preds = %26, %19
  %21 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %22 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 2
  %24 = load %struct.tty_buffer*, %struct.tty_buffer** %23, align 8
  store %struct.tty_buffer* %24, %struct.tty_buffer** %3, align 8
  %25 = icmp ne %struct.tty_buffer* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %20
  %27 = load %struct.tty_buffer*, %struct.tty_buffer** %3, align 8
  %28 = getelementptr inbounds %struct.tty_buffer, %struct.tty_buffer* %27, i32 0, i32 0
  %29 = load %struct.tty_buffer*, %struct.tty_buffer** %28, align 8
  %30 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %31 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 2
  store %struct.tty_buffer* %29, %struct.tty_buffer** %32, align 8
  %33 = load %struct.tty_buffer*, %struct.tty_buffer** %3, align 8
  %34 = call i32 @kfree(%struct.tty_buffer* %33)
  br label %20

35:                                               ; preds = %20
  %36 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %37 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  store i32* null, i32** %38, align 8
  %39 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %40 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  store i64 0, i64* %41, align 8
  ret void
}

declare dso_local i32 @kfree(%struct.tty_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
